Notification Apatpter + Dummy notifications + Xml implemented

--- a/app/src/main/res/layout/fragment_past.xml
+++ b/app/src/main/res/layout/fragment_past.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
+    android:padding="16dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_past"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Past Screen"
-        android:textSize="24sp"/>
-</FrameLayout>
+    <!-- Past Tasks List -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_past_tasks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+</LinearLayout>
